fix: renaming nav-bar, nav-list, nav-link

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -308,6 +308,11 @@ navbar__theme_demo__light:
   path: >-
     src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--light.twig
   namespace: '@bolt/navbar--theme-demo--light.twig'
+navbar__theme_demo__medium:
+  filename: navbar--theme-demo--medium.twig
+  path: >-
+    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--medium.twig
+  namespace: '@bolt/navbar--theme-demo--medium.twig'
 navbar__theme_demo__xdark:
   filename: navbar--theme-demo--xdark.twig
   path: >-
