--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -53,7 +53,7 @@
 		"@bolt/components-image": "^0.2.1",
 		"@bolt/components-logo": "^0.2.1",
 		"@bolt/components-ordered-list": "^0.1.4",
-		"@bolt/components-navbar": "^0.1.0-alpha.0",
+		"@bolt/components-nav-bar": "^0.0.0",
 		"@bolt/components-page-footer": "^0.4.0",
 		"@bolt/components-page-header": "^0.0.1-alpha.8",
 		"@bolt/components-site": "^0.5.0",
