--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,7 @@
     "@bolt/components-critical-fonts": "^0.4.7",
     "@bolt/components-icon": "^0.2.5",
     "@bolt/components-image": "^0.2.1",
-    "@bolt/components-navbar": "^0.1.0-alpha.0",
+    "@bolt/components-nav-bar": "^0.0.0",
     "@bolt/components-smooth-scroll": "^0.0.0",
     "@bolt/elements-all": "^0.5.4",
     "@bolt/generic-all": "^0.5.2",
