--- a/config/config.yml
+++ b/config/config.yml
@@ -114,6 +114,7 @@ plugins:
           - src/_patterns/02-components/bolt-page-footer/src
           - src/_patterns/02-components/bolt-page-header/src
           - src/_patterns/02-components/bolt-quote
+          - src/_patterns/02-components/bolt-sticky/demo
           - src/_patterns/02-components/bolt-sticky/src
           - src/_patterns/02-components/bolt-teaser/src
           - src/_patterns/02-components/bolt-unordered-list/demo/theming
