--- a/src/_patterns/02-components/bolt-sticky/package.json
+++ b/src/_patterns/02-components/bolt-sticky/package.json
@@ -21,6 +21,11 @@
       "name": "Mike Mai",
       "email": "boss@mikemai.net",
       "web": "http://mikemai.net/"
+    },
+    {
+      "name": "Rémy Denton",
+      "email": "remy.denton@pega.com",
+      "web": "https://github.com/remydenton"
     }
   ],
   "homepage": "https://boltdesignsystem.com",
