fix: pattern lab bug messing up ordered list's name in navigation

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -290,39 +290,40 @@ logo:
   filename: logo.twig
   path: src/_patterns/02-components/bolt-logo/src/logo.twig
   namespace: '@bolt/logo.twig'
-navbar:
-  filename: navbar.twig
-  path: src/_patterns/02-components/bolt-navbar/src/navbar.twig
-  namespace: '@bolt/navbar.twig'
-navbar__theme_demo:
-  filename: navbar--theme-demo.twig
-  path: src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo.twig
-  namespace: '@bolt/navbar--theme-demo.twig'
-navbar__theme_demo__dark:
-  filename: navbar--theme-demo--dark.twig
+nav_bar:
+  filename: nav-bar.twig
+  path: src/_patterns/02-components/bolt-nav-bar/src/nav-bar.twig
+  namespace: '@bolt/nav-bar.twig'
+nav_bar__theme_demo:
+  filename: nav-bar--theme-demo.twig
   path: >-
-    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--dark.twig
-  namespace: '@bolt/navbar--theme-demo--dark.twig'
-navbar__theme_demo__light:
-  filename: navbar--theme-demo--light.twig
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo.twig
+  namespace: '@bolt/nav-bar--theme-demo.twig'
+nav_bar__theme_demo__dark:
+  filename: nav-bar--theme-demo--dark.twig
   path: >-
-    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--light.twig
-  namespace: '@bolt/navbar--theme-demo--light.twig'
-navbar__theme_demo__medium:
-  filename: navbar--theme-demo--medium.twig
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--dark.twig
+  namespace: '@bolt/nav-bar--theme-demo--dark.twig'
+nav_bar__theme_demo__light:
+  filename: nav-bar--theme-demo--light.twig
   path: >-
-    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--medium.twig
-  namespace: '@bolt/navbar--theme-demo--medium.twig'
-navbar__theme_demo__xdark:
-  filename: navbar--theme-demo--xdark.twig
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--light.twig
+  namespace: '@bolt/nav-bar--theme-demo--light.twig'
+nav_bar__theme_demo__medium:
+  filename: nav-bar--theme-demo--medium.twig
   path: >-
-    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--xdark.twig
-  namespace: '@bolt/navbar--theme-demo--xdark.twig'
-navbar__theme_demo__xlight:
-  filename: navbar--theme-demo--xlight.twig
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--medium.twig
+  namespace: '@bolt/nav-bar--theme-demo--medium.twig'
+nav_bar__theme_demo__xdark:
+  filename: nav-bar--theme-demo--xdark.twig
   path: >-
-    src/_patterns/02-components/bolt-navbar/demo/theming/navbar--theme-demo--xlight.twig
-  namespace: '@bolt/navbar--theme-demo--xlight.twig'
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--xdark.twig
+  namespace: '@bolt/nav-bar--theme-demo--xdark.twig'
+nav_bar__theme_demo__xlight:
+  filename: nav-bar--theme-demo--xlight.twig
+  path: >-
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--xlight.twig
+  namespace: '@bolt/nav-bar--theme-demo--xlight.twig'
 ordered_list:
   filename: ordered-list.twig
   path: src/_patterns/02-components/bolt-ordered-list/src/ordered-list.twig
