chore: adding updated files

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -132,10 +132,6 @@ button_group:
   filename: button-group.twig
   path: src/_patterns/02-components/bolt-button-group/src/button-group.twig
   namespace: '@bolt/button-group.twig'
-button_kitchen_sink:
-  filename: button-kitchen-sink.twig
-  path: src/_patterns/02-components/bolt-button/demos/button-kitchen-sink.twig
-  namespace: '@bolt/button-kitchen-sink.twig'
 camera:
   filename: _camera.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_camera.twig
@@ -431,6 +427,10 @@ sticky:
   filename: sticky.twig
   path: src/_patterns/02-components/bolt-sticky/src/sticky.twig
   namespace: '@bolt/sticky.twig'
+sticky_demo:
+  filename: sticky.demo.twig
+  path: src/_patterns/02-components/bolt-sticky/demo/sticky.demo.twig
+  namespace: '@bolt/sticky.demo.twig'
 subheadline:
   filename: subheadline.twig
   path: src/_patterns/02-components/bolt-headline/src/subheadline.twig
