chore: merging updated packages + fixing navbar twig include

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -189,6 +189,10 @@ d8_homepage_video_test:
   filename: d8-homepage-video-test.twig
   path: src/_patterns/04-pages/d8-homepage/d8-homepage-video-test.twig
   namespace: '@bolt/d8-homepage-video-test.twig'
+d8_product:
+  filename: d8-product.twig
+  path: src/_patterns/04-pages/d8-product/d8-product.twig
+  namespace: '@bolt/d8-product.twig'
 d8_product_landing:
   filename: d8-product-landing.twig
   path: src/_patterns/04-pages/d8-product-landing/d8-product-landing.twig
@@ -334,6 +338,40 @@ macbook:
   filename: _macbook.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/devices/_macbook.twig
   namespace: '@bolt/_macbook.twig'
+nav_bar:
+  filename: nav-bar.twig
+  path: src/_patterns/02-components/bolt-nav-bar/src/nav-bar.twig
+  namespace: '@bolt/nav-bar.twig'
+nav_bar__theme_demo:
+  filename: nav-bar--theme-demo.twig
+  path: >-
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo.twig
+  namespace: '@bolt/nav-bar--theme-demo.twig'
+nav_bar__theme_demo__dark:
+  filename: nav-bar--theme-demo--dark.twig
+  path: >-
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--dark.twig
+  namespace: '@bolt/nav-bar--theme-demo--dark.twig'
+nav_bar__theme_demo__light:
+  filename: nav-bar--theme-demo--light.twig
+  path: >-
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--light.twig
+  namespace: '@bolt/nav-bar--theme-demo--light.twig'
+nav_bar__theme_demo__medium:
+  filename: nav-bar--theme-demo--medium.twig
+  path: >-
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--medium.twig
+  namespace: '@bolt/nav-bar--theme-demo--medium.twig'
+nav_bar__theme_demo__xdark:
+  filename: nav-bar--theme-demo--xdark.twig
+  path: >-
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--xdark.twig
+  namespace: '@bolt/nav-bar--theme-demo--xdark.twig'
+nav_bar__theme_demo__xlight:
+  filename: nav-bar--theme-demo--xlight.twig
+  path: >-
+    src/_patterns/02-components/bolt-nav-bar/demo/theming/nav-bar--theme-demo--xlight.twig
+  namespace: '@bolt/nav-bar--theme-demo--xlight.twig'
 nexus_6:
   filename: _nexus-6.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/devices/_nexus-6.twig
@@ -415,6 +453,14 @@ small:
   filename: small.twig
   path: src/_patterns/01-core/04-elements/elements-small/small.twig
   namespace: '@bolt/small.twig'
+smooth_scroll:
+  filename: smooth-scroll.twig
+  path: src/_patterns/02-components/bolt-smooth-scroll/src/smooth-scroll.twig
+  namespace: '@bolt/smooth-scroll.twig'
+smooth_scroll_demo:
+  filename: smooth-scroll.demo.twig
+  path: src/_patterns/02-components/bolt-smooth-scroll/demo/smooth-scroll.demo.twig
+  namespace: '@bolt/smooth-scroll.demo.twig'
 speaker:
   filename: _speaker.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_speaker.twig
