fix: copy over the latest nav-bar code

--- a/config/config.yml
+++ b/config/config.yml
@@ -107,12 +107,16 @@ plugins:
           - src/_patterns/02-components/bolt-image/src
           - src/_patterns/02-components/bolt-link/src
           - src/_patterns/02-components/bolt-logo/src
+          - src/_patterns/02-components/bolt-nav-bar/demo/theming
+          - src/_patterns/02-components/bolt-nav-bar/src
           - src/_patterns/02-components/bolt-ordered-list/demo/theming
           - src/_patterns/02-components/bolt-ordered-list/src
           - src/_patterns/02-components/bolt-page-footer/lib
           - src/_patterns/02-components/bolt-page-footer/src
           - src/_patterns/02-components/bolt-page-header/src
           - src/_patterns/02-components/bolt-quote
+          - src/_patterns/02-components/bolt-smooth-scroll/demo
+          - src/_patterns/02-components/bolt-smooth-scroll/src
           - src/_patterns/02-components/bolt-sticky/demo
           - src/_patterns/02-components/bolt-sticky/src
           - src/_patterns/02-components/bolt-teaser/src
