--- a/src/package.json
+++ b/src/package.json
@@ -15,6 +15,8 @@
     "@bolt/components-device-viewer": "^0.1.1",
     "@bolt/components-icon": "^0.3.1",
     "@bolt/components-image": "^0.3.1",
+    "@bolt/components-nav-bar": "^0.0.0",
+    "@bolt/components-smooth-scroll": "^0.0.0",
     "@bolt/elements-all": "^0.5.4",
     "@bolt/generic-all": "^0.5.2",
     "@bolt/objects-all": "^0.4.5",
