--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -53,6 +53,7 @@
 		"@bolt/components-image": "^0.3.1",
 		"@bolt/components-logo": "^0.2.2",
 		"@bolt/components-ordered-list": "^0.1.4",
+		"@bolt/components-nav-bar": "^0.0.0",
 		"@bolt/components-page-footer": "^0.4.0",
 		"@bolt/components-page-header": "^0.0.2",
 		"@bolt/components-site": "^0.5.0",
