--- a/.travis.yml
+++ b/.travis.yml
@@ -59,10 +59,7 @@ install:
 
 script:
 - npm run test
-- travis_wait npm run build
-
-after_success:
-- npm run deploy
+- travis_wait npm run build && npm run deploy # only run deploy if build is successful. Can't do `after_success` b/c if deploy fails, the build still reports success. Can't use `deploy` step b/c Travis skips that on PRs.
 
 cache:
   apt: true
