Removing node_modules cache for now.

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,8 +61,8 @@ cache:
   apt: true
 #  yarn: true
   directories:
-  - "$HOME/.cache/yarn"
-  - node_modules
+#  - "$HOME/.cache/yarn"
+#  - node_modules
 
 notifications:
   email:
