WIP: stashing latest

--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -20,8 +20,9 @@
     "@webcomponents/webcomponentsjs": "^1.0.14",
     "core-js": "^2.5.1",
     "es6-promise": "^4.1.1",
-    "lit-html": "latest",
-    "preact": "^8.2.6",
-    "skatejs": "^5.0.0-beta.3"
+    "lit-html": "^0.7.1",
+    "preact": "^8.2.5",
+    "skatejs": "^5.0.0-beta.4",
+    "yocss": "^0.5.1"
   }
 }
