WIP: stashing latest

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "publish:canary": "lerna publish --canary --npm-tag=next",
     "start": "gulp",
     "pre-build": "lerna exec -- npm run --if-present build",
-    "build": "export NODE_ENV=production && npm run pre-build && gulp build",
-    "build:full": "export NODE_ENV=production && npm run pre-build && gulp build:full",
+    "build": "NODE_ENV=production npm run pre-build && NODE_ENV=production gulp build",
+    "build:full": "NODE_ENV=production npm run pre-build && NODE_ENV=production gulp build:full",
     "setup": "npm run bootstrap && npm run composer:setup",
     "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run clean:composer && npm run composer:install; fi",
     "composer:install": "composer install --prefer-source --no-interaction --no-dev",
@@ -180,7 +180,7 @@
     "remark-preset-lint-markdown-style-guide": "^2.1.1",
     "remark-preset-lint-recommended": "^3.0.1",
     "sass-loader": "^6.0.6",
-    "skatejs": "^5.0.0-beta.3",
+    "skatejs": "^5.0.0-beta.4",
     "skatejs-web-components": "^0.0.1",
     "snyk": "^1.47.0",
     "standard-version": "^4.2.0",
