Adding ImageMagick dep to Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ addons:
     packages:
     - g++-4.8
     - graphicsmagick
+    - imagemagick
 
 before_install:
 - nvm install 7 # or 5, 6, or whatever
