--- a/config/config.yml
+++ b/config/config.yml
@@ -120,6 +120,7 @@ plugins:
           - src/_patterns/02-components/bolt-unordered-list/src
           - src/_patterns/03-templates/default
           - src/_patterns/04-pages/bolt-homepage
+          - src/_patterns/04-pages/bolt-sandbox
           - src/_patterns/04-pages/bolt-theming-qa
           - src/_patterns/04-pages/d8-homepage
           - src/_patterns/04-pages/d8-product-landing
