--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "publish:canary": "lerna publish --canary --npm-tag=next",
     "start": "gulp",
     "pre-build": "lerna exec -- npm run --if-present build",
-    "build": "export NODE_ENV=production npm run pre-build && gulp build",
-    "build:full": "export NODE_ENV=production npm run pre-build && gulp build:full",
+    "build": "export NODE_ENV=production && npm run pre-build && gulp build",
+    "build:full": "export NODE_ENV=production && npm run pre-build && gulp build:full",
     "setup": "npm run bootstrap && npm run composer:setup",
     "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run clean:composer && npm run composer:install; fi",
     "composer:install": "composer install --prefer-source --no-interaction --no-dev",
