WIP: stashing latest

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -124,6 +124,10 @@ brand_colors:
   filename: 01-brand-colors.twig
   path: src/_patterns/01-core/02-tools/tools-spacing/demos/01-brand-colors.twig
   namespace: '@bolt/01-brand-colors.twig'
+brightcove_player:
+  filename: brightcove-player.twig
+  path: src/_patterns/02-components/brightcove-player/src/brightcove-player.twig
+  namespace: '@bolt/brightcove-player.twig'
 button:
   filename: button.twig
   path: src/_patterns/02-components/bolt-button/src/button.twig
@@ -538,6 +542,10 @@ unordered_list__theme_demo__xlight:
   path: >-
     src/_patterns/02-components/bolt-unordered-list/demo/theming/01-unordered-list--theme-demo--xlight.twig
   namespace: '@bolt/01-unordered-list--theme-demo--xlight.twig'
+video:
+  filename: video.twig
+  path: src/_patterns/02-components/bolt-video/src/video.twig
+  namespace: '@bolt/video.twig'
 volume:
   filename: _volume.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_volume.twig
