--- a/src/package.json
+++ b/src/package.json
@@ -12,8 +12,10 @@
     "@bolt/components-all": "^0.6.3",
     "@bolt/components-card": "^0.5.6",
     "@bolt/components-critical-fonts": "^0.4.10",
-    "@bolt/brightcove-video": "^0.0.0",
+    "@bolt/components-brightcove-player": "^0.0.0",
     "@bolt/components-device-viewer": "^0.1.1",
+    "@bolt/components-button": "^0.6.3",
+    "@bolt/objects-ratio": "^0.6.0",
     "@bolt/components-icon": "^0.3.1",
     "@bolt/components-image": "^0.3.1",
     "@bolt/components-nav-bar": "^0.0.0",
