--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/package.json
@@ -35,7 +35,15 @@
   },
   "style": "src/ratio.scss",
   "twig": "src/ratio.twig",
+  "main": "src/ratio.js",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/core": "^0.4.1",
+    "@bolt/settings-all": "^0.7.4",
+    "@bolt/tools-all": "^0.5.4",
+    "npm-run-all": "^4.0.2",
+    "skatejs": "^5.0.0-beta.4"
   }
 }
