--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -37,6 +37,8 @@
     "@bolt/build-webpack": "^0.4.1"
   },
   "dependencies": {
+    "@bolt/build-webpack": "^0.4.1",
+    "@bolt/core": "^0.4.1",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/tools-all": "^0.5.4"
   },
