--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -36,7 +36,7 @@
 	},
 	"dependencies": {
 		"@bolt/components-action-blocks": "^0.3.0",
-		"@bolt/brightcove-video": "^0.0.0",
+		"@bolt/components-brightcove-player": "^0.0.0",
 		"@bolt/components-background": "^0.2.2",
 		"@bolt/components-band": "^0.5.2",
 		"@bolt/components-blockquote": "^0.2.4",
