--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -33,5 +33,15 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@bolt/build-webpack": "^0.4.1",
+    "@bolt/core": "^0.4.1",
+    "@bolt/settings-all": "^0.7.4",
+    "@bolt/tools-all": "^0.5.4",
+    "@skatejs/renderer-preact": "^0.1.0",
+    "core-js": "^2.5.1",
+    "preact": "^8.2.5",
+    "skatejs": "^5.0.0-beta.4"    
   }
 }
