feat: working expand functionality w/ background videos, decoupled from bands and band collections. lots and lots of cleanup left but at least this gets us half-way there.

--- a/src/_patterns/02-components/bolt-video/package.json
+++ b/src/_patterns/02-components/bolt-video/package.json
@@ -40,6 +40,11 @@
 	"dependencies": {
 		"@bolt/settings-all": "^0.7.4",
 		"@bolt/tools-all": "^0.5.4",
-		"@bolt/core": "^0.4.0-rc.2"
+		"@bolt/core": "^0.4.1",
+		"preact": "^8.2.5",
+		"skatejs": "^5.0.0-beta.4"
+	},
+	"devDependencies": {
+		"@bolt/build-webpack": "^0.4.1"
 	}
 }
