--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,8 @@
     "@bolt/components-critical-fonts": "^0.4.10",
     "@bolt/components-brightcove-player": "^0.0.0",
     "@bolt/components-device-viewer": "^0.1.1",
+    "@bolt/components-band": "^0.5.2",
+    "@bolt/components-video": "^0.0.0",
     "@bolt/components-button": "^0.6.3",
     "@bolt/objects-ratio": "^0.6.0",
     "@bolt/components-icon": "^0.3.1",
