--- a/src/_patterns/02-components/bolt-band/package.json
+++ b/src/_patterns/02-components/bolt-band/package.json
@@ -38,6 +38,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-spacing": "^0.5.0"
+    "@bolt/settings-all": "^0.7.4",
+    "@bolt/core": "^0.4.1",
+    "@bolt/tools-all": "^0.5.4",
+    "preact": "^8.2.5",
+    "skatejs": "^5.0.0-beta.4"
+  },
+  "devDependencies": {
+    "@bolt/build-webpack": "^0.4.1"
   }
 }
