chore: adding updated bolt manifest

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -71,6 +71,10 @@ band__teaser_collection:
   filename: band--teaser-collection.twig
   path: src/_patterns/02-components/bolt-band/src/band--teaser-collection.twig
   namespace: '@bolt/band--teaser-collection.twig'
+band__video_background:
+  filename: band--video-background.twig
+  path: src/_patterns/02-components/bolt-band/demo/band--video-background.twig
+  namespace: '@bolt/band--video-background.twig'
 band_kitchen_sink:
   filename: band-kitchen-sink.twig
   path: src/_patterns/02-components/bolt-band/demo/band-kitchen-sink.twig
@@ -193,6 +197,10 @@ d8_homepage_alt:
   filename: d8-homepage-alt.twig
   path: src/_patterns/04-pages/d8-homepage/d8-homepage-alt.twig
   namespace: '@bolt/d8-homepage-alt.twig'
+d8_homepage_video_band:
+  filename: d8-homepage-video-band.twig
+  path: src/_patterns/04-pages/d8-homepage/d8-homepage-video-band.twig
+  namespace: '@bolt/d8-homepage-video-band.twig'
 d8_homepage_video_test:
   filename: d8-homepage-video-test.twig
   path: src/_patterns/04-pages/d8-homepage/d8-homepage-video-test.twig
@@ -496,6 +504,14 @@ video:
   filename: video.twig
   path: src/_patterns/02-components/bolt-video/src/video.twig
   namespace: '@bolt/video.twig'
+video_background:
+  filename: video-background.twig
+  path: src/_patterns/02-components/bolt-video/src/video-background.twig
+  namespace: '@bolt/video-background.twig'
+video_inline:
+  filename: video-inline.twig
+  path: src/_patterns/02-components/bolt-video/src/video-inline.twig
+  namespace: '@bolt/video-inline.twig'
 volume:
   filename: _volume.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_volume.twig
