BK-26: Add background shapes component

--- a/config/config.yml
+++ b/config/config.yml
@@ -81,6 +81,7 @@ plugins:
           - src/_patterns/01-core/05-objects/bolt-ratio-object/src
           - src/_patterns/01-core/05-objects/bolt-ui-list-object/src
           - src/_patterns/01-core/05-objects/bolt-wrapper-object/src
+          - src/_patterns/02-components/05-bolt-background-shapes/src
           - src/_patterns/02-components/bolt-accordion/src
           - src/_patterns/02-components/bolt-action-blocks/demo/theming
           - src/_patterns/02-components/bolt-action-blocks/src
