--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -112,6 +112,10 @@ blockquote_theme_demo__xlight:
   path: >-
     src/_patterns/02-components/bolt-blockquote/demo/theming/01-blockquote-theme-demo--xlight.twig
   namespace: '@bolt/01-blockquote-theme-demo--xlight.twig'
+bolt_form:
+  filename: bolt-form.twig
+  path: src/_patterns/04-pages/bolt-sandbox/bolt-form.twig
+  namespace: '@bolt/bolt-form.twig'
 bolt_homepage:
   filename: bolt-homepage.twig
   path: src/_patterns/04-pages/bolt-homepage/bolt-homepage.twig
