--- a/src/_patterns/02-components/05-bolt-background-shapes/package.json
+++ b/src/_patterns/02-components/05-bolt-background-shapes/package.json
@@ -43,8 +43,6 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/tools-breakpoint": "^0.2.2",
-    "@bolt/tools-color-palette": "^0.5.2",
-    "@bolt/tools-spacing": "^0.5.0"
+    "@bolt/tools-all": "^0.5.4"
   }
 }
