chore: v0.5.0-alpha.1 release

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -47,6 +47,11 @@ background_demo:
   filename: background.demo.twig
   path: src/_patterns/02-components/bolt-background/demo/background.demo.twig
   namespace: '@bolt/background.demo.twig'
+background_shapes:
+  filename: background-shapes.twig
+  path: >-
+    src/_patterns/02-components/05-bolt-background-shapes/src/background-shapes.twig
+  namespace: '@bolt/background-shapes.twig'
 band:
   filename: band.twig
   path: src/_patterns/02-components/bolt-band/src/band.twig
