--- a/src/_patterns/02-components/package.json
+++ b/src/_patterns/02-components/package.json
@@ -38,6 +38,7 @@
 		"@bolt/components-action-blocks": "^0.3.0",
 		"@bolt/components-brightcove-player": "^0.0.0",
 		"@bolt/components-background": "^0.2.2",
+		"@bolt/components-background-shapes": "^0.0.0",
 		"@bolt/components-band": "^0.5.2",
 		"@bolt/components-blockquote": "^0.2.4",
 		"@bolt/components-video": "^0.0.0",
