chore(release): publish %s
 - @bolt/config-eslint@0.4.0-alpha.0
 - @bolt/core@0.5.0-alpha.0
 - @bolt/twig-extensions@0.4.0-alpha.0
 - @bolt/core-data@0.2.0-alpha.0
 - @bolt/bolt@0.6.0-alpha.0
 - @bolt/objects-all@0.5.0-alpha.0
 - @bolt/objects-ratio@0.7.0-alpha.0
 - @bolt/utilities-all@0.7.0-alpha.0
 - @bolt/utilities-text-align@0.3.0-alpha.0
 - @bolt/components-background-shapes@0.1.0-alpha.0
 - @bolt/components-action-blocks@0.4.0-alpha.0
 - @bolt/components-background@0.3.0-alpha.0
 - @bolt/components-band@0.6.0-alpha.0
 - @bolt/components-blockquote@0.3.0-alpha.0
 - @bolt/components-button-group@0.3.0-alpha.0
 - @bolt/components-button@0.7.0-alpha.0
 - @bolt/components-card@0.6.0-alpha.0
 - @bolt/components-chip-list@0.3.0-alpha.0
 - @bolt/components-chip@0.3.0-alpha.0
 - @bolt/components-critical-fonts@0.5.0-alpha.0
 - @bolt/components-device-viewer@0.2.0-alpha.0
 - @bolt/components-figure@0.2.0-alpha.0
 - @bolt/components-headline@0.7.0-alpha.0
 - @bolt/components-icon@0.4.0-alpha.0
 - @bolt/components-icons@0.2.0-alpha.0
 - @bolt/components-image@0.4.0-alpha.0
 - @bolt/components-logo@0.3.0-alpha.0
 - @bolt/components-nav-bar@0.1.0-alpha.0
 - @bolt/components-ordered-list@0.2.0-alpha.0
 - @bolt/components-site@0.6.0-alpha.0
 - @bolt/components-smooth-scroll@0.1.0-alpha.0
 - @bolt/components-sticky@0.1.0-alpha.0
 - @bolt/components-unordered-list@0.2.0-alpha.0
 - @bolt/components-video@0.1.0-alpha.0
 - @bolt/components-brightcove-player@0.1.0-alpha.0
 - @bolt/components-all@0.7.0-alpha.0
 - @bolt/templates-default@0.4.0-alpha.0
 - @bolt/build-tools@0.6.0-alpha.0
 - @bolt/build-styles@0.6.0-alpha.0
 - @bolt/build-webpack@0.5.0-alpha.0

--- a/src/_patterns/02-components/bolt-headline/package.json
+++ b/src/_patterns/02-components/bolt-headline/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.6.6",
+  "version": "0.7.0-alpha.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
