--- a/src/_patterns/02-components/bolt-unordered-list/package.json
+++ b/src/_patterns/02-components/bolt-unordered-list/package.json
@@ -10,7 +10,7 @@
     "design system",
     "components"
   ],
-  "version": "0.1.2",
+  "version": "0.2.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
