--- a/src/_patterns/02-components/bolt-video/package.json
+++ b/src/_patterns/02-components/bolt-video/package.json
@@ -10,7 +10,7 @@
 		"design system",
 		"components"
 	],
-	"version": "0.0.0",
+	"version": "0.1.0-alpha.0",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -39,12 +39,12 @@
 		"access": "public"
 	},
 	"dependencies": {
+		"@bolt/components-brightcove-player": "^0.1.0-alpha.0",
+		"@bolt/core": "^0.5.0-alpha.0",
 		"@bolt/settings-all": "^0.7.4",
-		"@bolt/tools-all": "^0.5.4",
-		"@bolt/core": "^0.4.1",
-		"@bolt/components-brightcove-player": "^0.0.0"
+		"@bolt/tools-all": "^0.5.4"
 	},
 	"devDependencies": {
-		"@bolt/build-webpack": "^0.4.1"
+		"@bolt/build-webpack": "^0.5.0-alpha.0"
 	}
 }
