--- a/src/_patterns/02-components/brightcove-player/package.json
+++ b/src/_patterns/02-components/brightcove-player/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/components-brightcove-player",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.0",
   "main": "dist/brightcove-player.min.js",
   "module:dev": "src/brightcove-player.js",
   "style": "src/brightcove-player.scss",
@@ -23,10 +23,10 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@bolt/build-webpack": "^0.4.1"
+    "@bolt/build-webpack": "^0.5.0-alpha.0"
   },
   "dependencies": {
-    "@bolt/core": "^0.4.1",
+    "@bolt/core": "^0.5.0-alpha.0",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/tools-all": "^0.5.4"
   },
