--- a/build-tools/gulp-tasks/build-styles/package.json
+++ b/build-tools/gulp-tasks/build-styles/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@bolt/build-styles",
-	"version": "0.5.1",
+	"version": "0.6.0-alpha.0",
 	"license": "MIT",
 	"description": "Compile Sass to CSS",
 	"main": "index.js",
