--- a/packages/bolt-config-presets/config-eslint/package.json
+++ b/packages/bolt-config-presets/config-eslint/package.json
@@ -8,7 +8,7 @@
     "javascript",
     "styleguide"
   ],
-  "version": "0.3.1",
+  "version": "0.4.0-alpha.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
