--- a/src/_patterns/01-core/05-objects/bolt-all-objects/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-all-objects/package.json
@@ -8,7 +8,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.4.5",
+  "version": "0.5.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -42,7 +42,7 @@
     "@bolt/objects-grid": "^0.5.0",
     "@bolt/objects-inline-list": "^0.4.0",
     "@bolt/objects-island": "^0.4.0",
-    "@bolt/objects-ratio": "^0.6.0",
+    "@bolt/objects-ratio": "^0.7.0-alpha.0",
     "@bolt/objects-ui-list": "^0.5.0",
     "@bolt/objects-wrapper": "^0.5.3"
   }
