--- a/src/_patterns/02-components/05-bolt-background-shapes/package.json
+++ b/src/_patterns/02-components/05-bolt-background-shapes/package.json
@@ -11,7 +11,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
