--- a/src/_patterns/02-components/bolt-background/package.json
+++ b/src/_patterns/02-components/bolt-background/package.json
@@ -11,7 +11,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.2.2",
+  "version": "0.3.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
