--- a/src/_patterns/02-components/bolt-band/package.json
+++ b/src/_patterns/02-components/bolt-band/package.json
@@ -11,7 +11,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.5.2",
+  "version": "0.6.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -33,17 +33,16 @@
   "bugs": {
     "url": "https://github.com/bolt-design-system/bolt/issues"
   },
-
   "publishConfig": {
     "access": "public"
   },
   "dependencies": {
+    "@bolt/core": "^0.5.0-alpha.0",
     "@bolt/settings-all": "^0.7.4",
-    "@bolt/core": "^0.4.1",
     "@bolt/tools-all": "^0.5.4"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.4.1"
+    "@bolt/build-webpack": "^0.5.0-alpha.0"
   },
   "main": "dist/bolt-band.min.js",
   "module:dev": "src/band.js",
