--- a/src/_patterns/02-components/bolt-card/package.json
+++ b/src/_patterns/02-components/bolt-card/package.json
@@ -10,7 +10,7 @@
     "design system",
     "components"
   ],
-  "version": "0.5.6",
+  "version": "0.6.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -36,13 +36,13 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.4.1",
+    "@bolt/core": "^0.5.0-alpha.0",
     "@bolt/settings-spacing": "^0.7.0",
     "@bolt/tools-all": "^0.5.4",
     "npm-run-all": "^4.0.2"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.4.1"
+    "@bolt/build-webpack": "^0.5.0-alpha.0"
   },
   "main": "dist/bolt-card.min.js",
   "style": "src/card.scss",
