--- a/packages/bolt-core/package.json
+++ b/packages/bolt-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/core",
   "description": "Core dependencies, utils, etc.",
-  "version": "0.4.1",
+  "version": "0.5.0-alpha.0",
   "license": "MIT",
   "main": "index.js",
   "repository": {
@@ -9,7 +9,7 @@
     "url": "https://github.com/bolt-design-system/bolt"
   },
   "dependencies": {
-    "@bolt/core-data": "^0.1.0",
+    "@bolt/core-data": "^0.2.0-alpha.0",
     "@skatejs/renderer-lit-html": "latest",
     "@skatejs/renderer-preact": "^0.1.0",
     "@webcomponents/custom-elements": "^1.0.4",
