--- a/src/_patterns/01-core/07-utilities/bolt-text-align/package.json
+++ b/src/_patterns/01-core/07-utilities/bolt-text-align/package.json
@@ -8,7 +8,7 @@
     "design system",
     "utilities"
   ],
-  "version": "0.2.0",
+  "version": "0.3.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
