--- a/src/_patterns/02-components/bolt-icon/package.json
+++ b/src/_patterns/02-components/bolt-icon/package.json
@@ -10,7 +10,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.3.1",
+  "version": "0.4.0-alpha.0",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -25,8 +25,8 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/components-icons": "^0.1.5",
-    "@bolt/core": "^0.4.1",
+    "@bolt/components-icons": "^0.2.0-alpha.0",
+    "@bolt/core": "^0.5.0-alpha.0",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/tools-all": "^0.5.4",
     "@skatejs/renderer-preact": "^0.1.0",
@@ -42,7 +42,7 @@
     "skatejs": "^5.0.0-beta.4"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.4.1"
+    "@bolt/build-webpack": "^0.5.0-alpha.0"
   },
   "main": "dist/bolt-icon.min.js",
   "style": "src/icon.scss",
