--- a/src/_patterns/02-components/bolt-nav-bar/package.json
+++ b/src/_patterns/02-components/bolt-nav-bar/package.json
@@ -10,7 +10,7 @@
     "design system",
     "components"
   ],
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.0",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -39,10 +39,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.4.1"
+    "@bolt/build-webpack": "^0.5.0-alpha.0"
   },
   "dependencies": {
-    "@bolt/core": "^0.3.0",
+    "@bolt/core": "^0.5.0-alpha.0",
     "@bolt/settings-all": "^0.7.2",
     "@bolt/tools-all": "^0.5.2",
     "@skatejs/renderer-preact": "^0.1.0",
