chore(release): publish %s
 - @bolt/config-eslint@0.4.0-alpha.1
 - @bolt/core@0.5.0-alpha.1
 - @bolt/twig-extensions@0.4.0-alpha.1
 - @bolt/core-data@0.2.0-alpha.1
 - @bolt/bolt@0.6.0-alpha.1
 - @bolt/objects-all@0.5.0-alpha.1
 - @bolt/objects-ratio@0.7.0-alpha.1
 - @bolt/utilities-all@0.7.0-alpha.1
 - @bolt/utilities-text-align@0.3.0-alpha.1
 - @bolt/components-background-shapes@0.1.0-alpha.1
 - @bolt/components-action-blocks@0.4.0-alpha.1
 - @bolt/components-background@0.3.0-alpha.1
 - @bolt/components-band@0.6.0-alpha.1
 - @bolt/components-blockquote@0.3.0-alpha.1
 - @bolt/components-button-group@0.3.0-alpha.1
 - @bolt/components-button@0.7.0-alpha.1
 - @bolt/components-card@0.6.0-alpha.1
 - @bolt/components-chip-list@0.3.0-alpha.1
 - @bolt/components-chip@0.3.0-alpha.1
 - @bolt/components-critical-fonts@0.5.0-alpha.1
 - @bolt/components-device-viewer@0.2.0-alpha.1
 - @bolt/components-figure@0.2.0-alpha.1
 - @bolt/components-headline@0.7.0-alpha.1
 - @bolt/components-icon@0.4.0-alpha.1
 - @bolt/components-icons@0.2.0-alpha.1
 - @bolt/components-image@0.4.0-alpha.1
 - @bolt/components-logo@0.3.0-alpha.1
 - @bolt/components-nav-bar@0.1.0-alpha.1
 - @bolt/components-ordered-list@0.2.0-alpha.1
 - @bolt/components-site@0.6.0-alpha.1
 - @bolt/components-smooth-scroll@0.1.0-alpha.1
 - @bolt/components-sticky@0.1.0-alpha.1
 - @bolt/components-unordered-list@0.2.0-alpha.1
 - @bolt/components-video@0.1.0-alpha.1
 - @bolt/components-brightcove-player@0.1.0-alpha.1
 - @bolt/components-all@0.7.0-alpha.1
 - @bolt/templates-default@0.4.0-alpha.1
 - @bolt/build-tools@0.6.0-alpha.1
 - @bolt/build-styles@0.6.0-alpha.1
 - @bolt/build-webpack@0.5.0-alpha.1

--- a/src/_patterns/02-components/brightcove-player/package.json
+++ b/src/_patterns/02-components/brightcove-player/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bolt/components-brightcove-player",
-  "version": "0.0.0",
-  "main": "src/brightcove-player.polyfilled",
+  "version": "0.1.0-alpha.1",
+  "main": "dist/brightcove-player.min.js",
   "style": "src/brightcove-player",
   "scripts": {
     "flow": "node_modules/flow-bin/cli.js",
@@ -34,7 +34,7 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "6.24.1",
+    "@bolt/build-webpack": "^0.5.0-alpha.1"
     "babel-core": "6.24.1",
     "babel-jest": "21.2.0",
     "babel-loader": "7.1.2",
@@ -55,7 +55,7 @@
     "prop-types": "15.6.0",
     "svgs": "3.1.1",
     "@bolt/build-webpack": "^0.4.1",
-    "@bolt/core": "^0.4.1",
+    "@bolt/core": "^0.5.0-alpha.1",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/tools-all": "^0.5.4",
     "@skatejs/renderer-preact": "^0.1.0",
@@ -65,5 +65,11 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "scripts": {
+    "prepublishOnly": "npm run build",
+    "build": "npm-run-all --parallel build:*",
+    "build:bolt": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/brightcove-player --output-filename='bolt-brightcove-player.min.js' --output-public-path /scripts/",
+    "build:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/brightcove-player --output-filename='bolt-brightcove-player.wwwd8.min.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-brightcove-player/dist/"
   }
 }
