--- a/src/_patterns/01-core/05-objects/bolt-ratio-object/package.json
+++ b/src/_patterns/01-core/05-objects/bolt-ratio-object/package.json
@@ -11,7 +11,7 @@
     "design system",
     "objects"
   ],
-  "version": "0.6.0",
+  "version": "0.7.0-alpha.1",
   "maintainers": [
     {
       "name": "Salem Ghoweri",
@@ -40,10 +40,10 @@
     "access": "public"
   },
   "dependencies": {
-    "@bolt/core": "^0.4.1",
+    "@bolt/core": "^0.5.0-alpha.1",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/tools-all": "^0.5.4",
     "npm-run-all": "^4.0.2",
-    "skatejs": "^5.0.0-beta.4"
+    "@bolt/build-webpack": "^0.5.0-alpha.1"
   }
 }
