--- a/src/_patterns/02-components/bolt-button/package.json
+++ b/src/_patterns/02-components/bolt-button/package.json
@@ -19,7 +19,7 @@
     "ui toolkit",
     "design system"
   ],
-  "version": "0.6.3",
+  "version": "0.7.0-alpha.1",
   "author": "Salem Ghoweri",
   "homepage": "https://boltdesignsystem.com",
   "license": "MIT",
@@ -34,10 +34,10 @@
     "access": "public"
   },
   "devDependencies": {
-    "@bolt/build-webpack": "^0.4.1"
+    "@bolt/build-webpack": "^0.5.0-alpha.1"
   },
   "dependencies": {
-    "@bolt/build-webpack": "^0.4.1",
+    "@bolt/core": "^0.5.0-alpha.1",
     "@bolt/core": "^0.4.1",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/tools-all": "^0.5.4"
