--- a/src/_patterns/02-components/bolt-video/package.json
+++ b/src/_patterns/02-components/bolt-video/package.json
@@ -10,7 +10,7 @@
 		"design system",
 		"components"
 	],
-	"version": "0.0.0",
+	"version": "0.1.0-alpha.1",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -38,6 +38,8 @@
 		"access": "public"
 	},
 	"dependencies": {
+		"@bolt/components-brightcove-player": "^0.1.0-alpha.1",
+		"@bolt/core": "^0.5.0-alpha.1",
 		"@bolt/settings-all": "^0.7.4",
 		"@bolt/tools-all": "^0.5.4",
 		"@bolt/core": "^0.4.1",
@@ -45,6 +47,6 @@
 		"skatejs": "^5.0.0-beta.4"
 	},
 	"devDependencies": {
-		"@bolt/build-webpack": "^0.4.1"
+		"@bolt/build-webpack": "^0.5.0-alpha.1"
 	}
 }
