--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-      "php": ">=7.0",
+      "php": ">=5.6 || >= 7.0",
       "twig/twig": "^1.35.0",
       "cweagans/composer-patches": "~1.0",
       "pattern-lab/core": "^2.8.10",
