--- a/src/_patterns/02-components/bolt-video/package.json
+++ b/src/_patterns/02-components/bolt-video/package.json
@@ -10,7 +10,7 @@
 		"design system",
 		"components"
 	],
-	"version": "0.1.0-alpha.2",
+	"version": "0.1.0-alpha.3",
 	"maintainers": [
 		{
 			"name": "Salem Ghoweri",
@@ -42,9 +42,16 @@
 		"@bolt/components-brightcove-player": "^0.1.0-alpha.2",
 		"@bolt/core": "^0.5.0-alpha.2",
 		"@bolt/settings-all": "^0.7.4",
-		"@bolt/tools-all": "^0.5.4"
+		"@bolt/tools-all": "^0.5.4",
+		"npm-run-all": "^4.0.2"
 	},
 	"devDependencies": {
 		"@bolt/build-webpack": "^0.5.0-alpha.2"
+	},
+	"scripts": {
+		"prepublishOnly": "npm run build",
+		"build": "npm-run-all --parallel build:*",
+		"build:bolt": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/video --output-filename='bolt-video.min.js' --output-public-path /scripts/",
+		"build:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/video --output-filename='bolt-video.wwwd8.min.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-video/dist/"
 	}
 }
