--- a/config/config.yml
+++ b/config/config.yml
@@ -123,6 +123,7 @@ plugins:
           - src/_patterns/02-components/bolt-teaser/src
           - src/_patterns/02-components/bolt-unordered-list/demo/theming
           - src/_patterns/02-components/bolt-unordered-list/src
+          - src/_patterns/02-components/bolt-video/demo
           - src/_patterns/02-components/bolt-video/src
           - src/_patterns/02-components/brightcove-player/src
           - src/_patterns/03-templates/default
