test: testing video player fix

--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -557,12 +557,16 @@ video:
   namespace: '@bolt/video.twig'
 video_background:
   filename: video-background.twig
-  path: src/_patterns/02-components/bolt-video/src/video-background.twig
+  path: src/_patterns/02-components/bolt-video/demo/video-background.twig
   namespace: '@bolt/video-background.twig'
-video_inline:
-  filename: video-inline.twig
-  path: src/_patterns/02-components/bolt-video/src/video-inline.twig
-  namespace: '@bolt/video-inline.twig'
+video_static_test:
+  filename: video-static-test.twig
+  path: src/_patterns/02-components/bolt-video/src/video-static-test.twig
+  namespace: '@bolt/video-static-test.twig'
+video_tag:
+  filename: _video-tag.twig
+  path: src/_patterns/02-components/bolt-video/src/_video-tag.twig
+  namespace: '@bolt/_video-tag.twig'
 volume:
   filename: _volume.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_volume.twig
