--- a/src/_patterns/02-components/bolt-video/package.json
+++ b/src/_patterns/02-components/bolt-video/package.json
@@ -52,6 +52,8 @@
 		"prepublishOnly": "npm run build",
 		"build": "npm-run-all --parallel build:*",
 		"build:bolt": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/video --output-filename='bolt-video.min.js' --output-public-path /scripts/",
-		"build:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/video --output-filename='bolt-video.wwwd8.min.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-video/dist/"
+		"build:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.production --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/video --output-filename='bolt-video.wwwd8.min.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-video/dist/",
+		"dev:bolt": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/video --output-filename='bolt-video.js' --output-public-path /scripts/",
+		"dev:wwwd8": "./node_modules/@bolt/build-webpack/node_modules/.bin/webpack --env.cli --config ./node_modules/@bolt/build-webpack/webpack.config.cli.js --entry ./src/video --output-filename='bolt-video.wwwd8.js' --output-public-path /themes/custom/pegawww_theme/node_modules/@bolt/components-video/dist/"
 	}
 }
