chore: cleaning up old build scripts + fixing composer setup npm script

--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "lint:scss": "gulp styles:lint",
     "clean:lerna": "lerna clean -Y",
     "clean:git": "git clean -xdf",
-    "clean:composer": "rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components",
     "clean:lighthouse": "rm *.report.html",
     "clean:all": "npm run clean:git && npm run clean:lerna",
     "lint": "npm-run-all --parallel lint:* -c",
@@ -30,9 +29,9 @@
     "build": "export NODE_ENV=production && npm run pre-build && gulp build",
     "build:full": "export NODE_ENV=production && npm run pre-build && gulp build:full",
     "setup": "npm run bootstrap && npm run composer:setup",
-    "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run clean:composer && npm run composer:install; fi",
-    "composer:install": "composer install --prefer-source --no-interaction --no-dev",
-    "composer:clean": "rm -rf composer.lock && rm -rf vendor && rm -rf src/_twig-components",
+    "composer:setup": "if [ ! -f ./dist/index.html ]; then npm run composer:clean && npm run composer:install; fi",
+    "composer:install": "composer install -d apps/pattern-lab--workshop --prefer-source --no-interaction --no-dev",
+    "composer:clean": "rm -rf apps/pattern-lab--workshop/composer.lock && rm -rf apps/pattern-lab--workshop/vendor && rm -rf apps/pattern-lab--workshop/src/_twig-components",
     "test:travis": "yarn pretest && yarn lint",
     "test:lighthouse": "concurrently --kill-others \"http-server dist\" \"lighthouse --view http://localhost:8080\" ",
     "test:full": "yarn lint:scss && polymer test && yarn test:lighthouse && yarn lint:remark && npm run mocha",
