--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clean:all": "npm run clean:git && npm run clean:lerna",
     "lint": "npm-run-all --parallel lint:* -c",
     "mocha": "npm run mocha:build-tools",
-    "mocha:build-tools": "mocha ./build-tools/**/tests/*.test.js",
+    "mocha:build-tools": "mocha ./packages/build-tools/**/tests/*.test.js",
     "mocha:settings": "mocha **/settings-*/tests/*.test.js",
     "deploy": "node build-tools/gulp-tasks/build-slack/index.js",
     "publish": "lerna publish",
