WIP: move action block component

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ src/_twig-components
 src/_patterns/**/dist
 src/_patterns/**/dist/*
 
+apps/pattern-lab--workshop/src/_twig-components
 
 *.log
 lerna-debug.log
