fix: fixing PL compile

--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -63,5 +63,5 @@ plugins:
       bolt:
         recursive: true
         paths:
-          - ../../packages/components/
+          - ../../packages
           - src/_patterns
