feat: moving utils to new _includes folder; removing component demos accidently re-added

--- a/apps/pattern-lab--workshop/config/config.yml
+++ b/apps/pattern-lab--workshop/config/config.yml
@@ -65,3 +65,7 @@ plugins:
         paths:
           - ../../packages
           - src/_patterns
+      utils:
+        recursive: true
+        paths:
+          - src/_includes
