--- a/bolt-manifest.yml
+++ b/bolt-manifest.yml
@@ -208,7 +208,7 @@ default_template:
 demo:
   filename: demo.twig
   path: src/_patterns/00-utils/demo.twig
-  namespace: '@bolt/demo.twig'
+  namespace: '@utils/demo.twig'
 device_viewer:
   filename: device-viewer.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/device-viewer.twig
@@ -496,7 +496,7 @@ text:
 theme_demo:
   filename: theme-demo.twig
   path: src/_patterns/00-utils/theme-demo.twig
-  namespace: '@bolt/theme-demo.twig'
+  namespace: '@utils/theme-demo.twig'
 top_bar:
   filename: _top-bar.twig
   path: src/_patterns/02-components/bolt-device-viewer/src/parts/_top-bar.twig
