refactor: wiring up PL + webpack compiling CSS

--- a/apps/pattern-lab--workshop/package.json
+++ b/apps/pattern-lab--workshop/package.json
@@ -10,19 +10,33 @@
   },
   "dependencies": {
     "@bolt/components-all": "^0.6.3",
+    "@bolt/core": "^0.4.1",
     "@bolt/components-card": "^0.5.6",
     "@bolt/components-critical-fonts": "^0.4.10",
     "@bolt/components-device-viewer": "^0.1.1",
     "@bolt/components-icon": "^0.3.1",
     "@bolt/components-image": "^0.3.1",
-    "@bolt/components-nav-bar": "^0.0.0",
-    "@bolt/components-smooth-scroll": "^0.0.0",
     "@bolt/elements-all": "^0.5.4",
     "@bolt/generic-all": "^0.5.2",
     "@bolt/objects-all": "^0.4.5",
     "@bolt/settings-all": "^0.7.4",
     "@bolt/themes-all": "^0.6.1",
     "@bolt/tools-all": "^0.5.4",
-    "@bolt/utilities-all": "^0.6.0"
+    "@bolt/utilities-all": "^0.6.0",
+    "@theme-tools/sass-export-data": "^1.0.3",
+    "autoprefixer": "^7.2.3",
+    "clean-css-loader": "^0.1.4",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fs-extra": "^5.0.0",
+    "html-webpack-exclude-assets-plugin": "^0.0.5",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass-export": "0.0.2",
+    "npm-sass": "^2.2.1",
+    "path": "^0.12.7",
+    "postcss-loader": "^2.0.9",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0"
   }
 }
