Disabling git hooks for now

--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "test": "npm run mocha",
     "test:ci": "node browserstack.js",
     "pretest": "node packages/build-tools/check-imports.js",
-    "precommit": "npm run lint:scss",
-    "prepush": "npm test && npm run build:full",
+    "Xprecommit": "npm run lint:scss",
+    "Xprepush": "npm test && npm run build:full",
     "snyk-protect": "snyk protect"
   },
   "config": {
