Setting up JSON Schema Validation

--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
       "oomphinc/composer-installers-extender": "dev-master",
       "bolt/twig-extensions": "*",
       "gajus/dindent": "dev-master",
-      "symfony/yaml": "*"
+      "symfony/yaml": "*",
+        "justinrainbow/json-schema": "^5.0@dev"
     },
     "config": {
         "process-timeout": 0,
